Dark mode fixes

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,7 +14,6 @@ $background-color: #fafaff;
 
 $dark-text-color: #fbf1c7;
 $dark-background-color: #282828;
-$dark-link-color: #458588;
 
 $dark-post-meta-color: #ebdbb2;
 
